# SuperGunBros

./: .gitignore  CMakeLists.txt  LICENSE  main.cpp
assets/img/: cbpack.sh  pack.sh  pixelPacker.json
assets/img/src/: armPiece  logo.xcf  lowercase.xcf  pistol-trail.xcf  rocket-trail.xcf  splash.xcf  uppercase.xcf
assets/level/: Template.json  better  bnb.json  close_quarters.json  complex.json  gap.json  general_template.json  level_1.json  level_2.json  level_3.json  level_4.json  level_5.json  more_platforms.json  platforms.json  shafts.json  size_1_template.json  size_2_template.json  size_3_template.json  sprawl.json  test.json  testlevel.json  the_gap.json
assets/level/generation_scripts/: bnb_gen.py  close_quarters.py  complex_gen.py  gap_gen.py  level.py  platforms_gen.py  pre_builts.py  template_gen.py  test_gen.py
assets/sound/: menu.wav alias
assets/sound/src/: bounce.cpt  bounceShoot.cpt  flame.cpt  junkSources.bfxrlibrary  rocket_launcher.bfxrsound
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
src/: boxspawn.cpp  boxspawn.h  bullet.h  camera.cpp  camera.h  explosion.cpp  explosion.h  gameoverscreen.cpp  gameoverscreen.h  gamepad.cpp  gamepad.h  gamescreen.cpp  gamescreen.h  gun.cpp  gun.h  level.cpp  level.h  magic.h  main.cpp  menuscreen.cpp  menuscreen.h  physicsengine.cpp  physicsengine.h  pistol.cpp  pistol.h  player.cpp  player.h  playerinfo.h  point.cpp  point.h  readyscreen.cpp  readyscreen.h  rectangle.cpp  rectangle.h  render.cpp  render.h  renderlist.cpp  renderlist.h  rocket.cpp  rocket.h  (+5 more)
src/gameobjects/: explosion.cpp  explosion.h  gameobject.h  player.cpp  player.h
src/gameobjects/level/: background.cpp  background.h  boxspawn.cpp  boxspawn.h  effectfield.cpp  effectfield.h  level.cpp  level.h  obstacle.h
src/gameobjects/player/: player.cpp  player.h
src/gameobjects/player/statuseffects/: burningeffect.cpp  burningeffect.h  statuseffect.h
src/gameobjects/weapons/: bouncebullet.h  bullet.cpp  bullet.h  explosion.cpp  explosion.h  flame.cpp  flame.h  gun.cpp  gun.h  rocket.cpp  rocket.h  rocketbullet.cpp  weaponbox.cpp  weaponbox.h
src/gameobjects/weapons/flame/: flame.h  flamebullet.cpp  flamebullet.h
src/gameobjects/weapons/piercer/: pierce.h  piercebullet.h
src/gameobjects/weapons/pistol/: pistol.cpp  pistol.h  pistolbullet.h
src/gameobjects/weapons/ricochet/: bounce.h  bouncebullet.cpp  bouncebullet.h
src/gameobjects/weapons/rocket/: rocket.cpp  rocket.h  rocketbullet.cpp  rocketbullet.h
src/linux/: gamepad.cpp
src/osx/: gamepad.cpp
src/rendering/: camera.cpp  render.cpp  renderlist.cpp  renderlist.h
src/screens/: gamescreen.cpp  gamescreen.h  readyscreen.cpp  readyscreen.h
src/weapons/: bounce.cpp  bounce.h  bouncebullet.cpp  bouncebullet.h  bullet.cpp  bullet.h  flame.cpp  flame.h  flamebullet.cpp  flamebullet.h  gun.cpp  gun.h  pierce.cpp  pierce.h  piercebullet.cpp  piercebullet.h  pistol.cpp  pistol.h  pistolbullet.cpp  pistolbullet.h  rocket.cpp  rocket.h  rocketbullet.cpp  rocketbullet.h
